--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,9 @@
         </div>
         
         <div class="col-4">
+            <label for="user-id">User id</label>
+            <input type="number" id="user-id" class="form-control" name="user-id" value="3">
+            <label for="book-id">Book id</label>
             <input type="number" id="book-id" class="form-control" name="book-id">
         </div>
         <div class="col-4">
